add project to portfolio

--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
 					<br />
 					<p>
 						During my journey with programming, I tried fields such as
-						<span class="text--secondary">software development</span>,
+						<span class="text--secondary"
+							>desktop software and mobile app development</span
+						>,
 						<span class="text--primary">front-end/back-end web development</span
 						>, <span class="text--secondary">database management</span>,
-						<span class="text--primary">graphic design</span>, and
-						<span class="text--secondary">video game development</span>.
+						<span class="text--primary">graphic design</span>,
+						<span class="text--secondary">video game development</span>, and
+						<span class="text--primary">machine learning</span>.
 					</p>
 					<div class="article--email-box">
 						<div class="centered-container">
@@ -372,6 +375,68 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</article>
+					<article class="box-project" id="book-rental">
+						<div class="box-project__content">
+							<h3>Prepare to Plague</h3>
+							<span>Game created in Unity during game jam</span>
+							<a
+								target="_blank"
+								href="https://flabbet.itch.io/prepare-to-plague"
+								class="website-link__color"
+								>CLICK TO VISIT</a
+							>
+							<div class="content--main">
+								<p>
+									The project was made with <strong>Unity</strong> engine during
+									Polish 7-day game jam <strong>#ZostańWDomuRobGry</strong> in a
+									team of 3 people.
+								</p>
+								<p>
+									<strong>Prepare to plague</strong> Is a small turn-based
+									strategy game about rebuilding destroyed castle after a war
+									and plague.
+								</p>
+								<p>
+									The goal is to repair essential buildings required to survive
+									plague and stash vital resources like gold and food by
+									researching projects and reacting to random events.
+								</p>
+							</div>
+							<div class="content--technologies">
+								<!-- <h5>Technology</h5>
+								<p>
+									The app is built using Angular, with a Node.js backend for
+									handling API requests, and runs on Heroku.
+								</p> -->
+								<div class="card-skill__icon">
+									<div class="box-skill">
+										<img
+											src="./resources/icons/unity.svg"
+											style="background-color: white"
+										/>
+										<p>Unity</p>
+									</div>
+									<div class="box-skill">
+										<img src="./resources/icons/csharp-original.svg" alt="" />
+										<p>C#</p>
+									</div>
+									<div class="box-skill">
+										<img
+											src="./resources/icons/photoshop-original.svg"
+											alt=""
+										/>
+										<p>Photoshop</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="content--image">
+							<img
+								src="./resources/images/preparetoplaguescreen.png"
+								alt="Internet library"
+							/>
 						</div>
 					</article>
 				</article>
