--- a/index.html
+++ b/index.html
@@ -455,6 +455,11 @@
 								<p>CSS</p>
 							</div>
 							<div class="box-skill">
+								<img src="./resources/icons/sass-original.svg" alt="" />
+
+								<p>Sass</p>
+							</div>
+							<div class="box-skill">
 								<img src="./resources/icons/javascript-original.svg" alt="" />
 								<p>JavaScript</p>
 							</div>
@@ -464,19 +469,31 @@
 								<p>TypeScript</p>
 							</div>
 							<div class="box-skill">
-								<img src="./resources/icons/csharp-original.svg" alt="" />
+								<img src="./resources/icons/python-5.svg" alt="" />
 
-								<p>C Sharp</p>
+								<p>Python</p>
 							</div>
 							<div class="box-skill">
-								<img src="./resources/icons/sass-original.svg" alt="" />
+								<img src="./resources/icons/csharp-original.svg" alt="" />
 
-								<p>Sass</p>
+								<p>C#</p>
 							</div>
+							<div class="box-skill">
+								<img src="./resources/icons/c.svg" alt="" />
+
+								<p>C++</p>
+							</div>
+
 							<div class="box-skill">
 								<img src="./resources/icons/sql-original.svg" alt="" />
 
 								<p>SQL</p>
+							</div>
+
+							<div class="box-skill">
+								<img src="./resources/icons/java-4.svg" alt="" />
+
+								<p>Java</p>
 							</div>
 						</div>
 					</div>
@@ -519,6 +536,22 @@
 								<img src="./resources/icons/unity-original.svg" alt="" />
 								<p>Unity</p>
 							</div>
+							<div class="box-skill">
+								<img src="./resources/icons/react-2.svg" alt="" />
+								<p>React</p>
+							</div>
+							<div class="box-skill">
+								<img src="./resources/icons/mongodb-icon-1.svg" alt="" />
+								<p>MongoDB</p>
+							</div>
+							<div class="box-skill">
+								<img src="./resources/icons/dot-net-core-7.svg" alt="" />
+								<p>.NET framework</p>
+							</div>
+							<div class="box-skill">
+								<img src="./resources/icons/android-studio.svg" alt="" />
+								<p>Android Studio</p>
+							</div>
 						</div>
 					</div>
 					<div class="card-skill">
@@ -527,6 +560,10 @@
 							<div class="box-skill">
 								<img src="./resources/icons/github-original.svg" alt="" />
 								<p>GitHub</p>
+							</div>
+							<div class="box-skill">
+								<img src="./resources/icons/git-icon.svg" alt="" />
+								<p>Git</p>
 							</div>
 							<div class="box-skill">
 								<img
