small text changes

--- a/index.html
+++ b/index.html
@@ -55,13 +55,10 @@
 						Hi, I’m Sławomir Sojka.
 						<br />
 						I'm a still learning
-						<span class="text--primary">Full Stack Developer</span>.
+						<span class="text--primary">Software Developer</span>.
 					</h3>
 					<br />
-					<p>
-						I am passionate about programming and fascinated with new
-						technologies.
-					</p>
+					<p>I am passionate about IT and fascinated with new technologies.</p>
 					<br />
 					<p>
 						During my journey with programming, I tried fields such as
@@ -137,10 +134,7 @@
 							>
 							<h5>PROJECT</h5>
 							<strong
-								><p>
-									Developing and managing a website for a client, a Norwegian
-									retail company.
-								</p></strong
+								><p>Developing and managing a website for a client</p></strong
 							>
 							<ul>
 								<li>
