--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<a
 								target="_blank"
 								class="link link--arrowed"
-								href="mailto:slawomir@sojka.codes"
+								href="mailto:sojkaslawek123@gmail.com"
 								>Email Me
 								<svg
 									class="arrow-icon"
@@ -594,7 +594,7 @@
 							<h4>I will be glad to answer your questions</h4>
 							<div class="contact-mail">
 								<p>
-									<a target="_blank" href="mailto:slawomir@sojka.codes">
+									<a target="_blank" href="mailto:sojkaslawek123@gmail.com">
 										Get in Touch</a
 									>
 								</p>
@@ -603,9 +603,9 @@
 
 						<div class="contact-links">
 							<button class="btn--mail">
-								<a target="_blank" href="mailto:slawomir@sojka.codes"
+								<a target="_blank" href="mailto:sojkaslawek123@gmail.com"
 									><img src="./resources/icons/email.svg" alt="" />
-									<span>slawomir@sojka.codes</span></a
+									<span>sojkaslawek123@gmail.com</span></a
 								>
 							</button>
 							<button class="btn--cv">
